Apply latest wallet application updates